# space_invaders

./: .gitignore  README.md  pyproject.toml
space_invaders/: __init__.py  config.yaml  main.py
space_invaders/components/: __init__.py  base_objects.py  blockade.py  controller.py  enemy_controller.py  game_handler.py  laser.py  laser_controller.py  level.py  objects.py  player.py  scoreboard.py
space_invaders/gym_env/: __init__.py  space_invader_env.py
tests/: test_space_invaders_env.py
