[tool.poetry]
name = "space-invaders-niklas-mueller"
version = "1.0.0"
description = "A custom space invaders game using Pygame for human and computer players."
authors = ["Niklas Mueller <n.mueller@medienagentur24.eu>"]
readme = "README.md"
packages = [{include = "space_invaders"}]

[tool.poetry.dependencies]
python = "^3.12"
pygame = "^2.5.2"
numpy = "^1.26.3"
pyyaml = "^6.0.1"
gymnasium = "^0.29.1"
pillow = "^10.2.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
